Add dedication and half title page

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,9 +1,39 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
 
-#chapter-32 p:last-child {
+#chapter-32 p:last-child{
+	font-variant: small-caps;
+	padding-top: 3em;
+	text-align: center;
+	text-indent: 0;
+}
+
+/* Centered dedications */
+section[epub|type~="dedication"]{
+	text-align: center;
     font-variant: small-caps;
-    text-align: center;
-    padding-top: 3em;
-    text-indent: 0;
-  }
+}
+
+section[epub|type~="dedication"] > *{
+	display: inline-block;
+	margin: auto;
+	margin-top: 3em;
+	max-width: 80%;
+}
+
+@supports(display: flex){
+	section[epub|type~="dedication"]{
+		align-items: center;
+		box-sizing: border-box;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		min-height: calc(98vh - 3em);
+		padding-top: 3em;
+	}
+
+	section[epub|type~="dedication"] > *{
+		margin: 0;
+	}
+}
+/* End centered dedications */
